# ChangeLog for app-accessibility/edbrowse
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/edbrowse/ChangeLog,v 1.8 2011/11/15 16:38:16 axs Exp $

*edbrowse-3.4.8 (15 Nov 2011)

  15 Nov 2011; Ian Stakenvicius <axs@gentoo.org> edbrowse-3.4.7.ebuild,
  +edbrowse-3.4.8.ebuild:
  adding new version that supports spidermonkey-1.8.5 and fixing deps of
  current version, bug# 376979

  13 Sep 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #353756

  16 May 2011; Christopher Brannon <cbrannon@gentoo.org> edbrowse-3.4.7.ebuild:
  Added ~amd64 keyword.

  This package builds and runs on amd64.

*edbrowse-3.4.7 (11 Apr 2011)

  11 Apr 2011; Christopher Brannon <cbrannon@gentoo.org>
  -edbrowse-3.4.6.ebuild, -files/edbrowse-3.4.6-fix-makefile.patch,
  -files/edbrowse-3.4.6-fix-off-by-one.patch, +edbrowse-3.4.7.ebuild,
  +files/edbrowse-3.4.7-fix-makefile.patch:
  Add latest version to the tree, remove the older unstable version.

  3.4.7 is here.
  3.4.6 was never stabilized.
  It had flaws, like the use of memcpy on overlapping regions.
  No need to keep it in the tree.

  28 Mar 2011; Christopher Brannon <cbrannon@gentoo.org>
  edbrowse-3.4.6.ebuild, files/edbrowse-3.4.6-fix-makefile.patch,
  metadata.xml:
  * Make it possible to build with either dev-lang/spidermonkey-1.7.x or
  dev-lang/spidermonkey-1.9.x (fixes bug #359035).
  * I am now upstream for this package. HOMEPAGE and SRC_URI were changed
  accordingly.
  * Change maintainer to myself (after discussion with WilliamH).

  16 Mar 2011; William Hubbs <williamh@gentoo.org> edbrowse-3.4.6.ebuild:
  fix dependency on dev-lang/spidermonkey for #359035.
  Thanks to Chris Brannon.

*edbrowse-3.4.6 (23 Feb 2011)

  23 Feb 2011; William Hubbs <williamh@gentoo.org> +edbrowse-3.4.6.ebuild,
  +files/edbrowse-3.4.6-fix-makefile.patch,