@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX edbrowse-3.4.7-fix-makefile.patch 406 RMD160 e35ee9777ddb988064bc34d7704457b3e092dddf SHA1 985528fdbb7d29469794f6871d1e45b07f40d5ed SHA256 0f3976650537658b81a8302346fa225fd6e5e13a126e5324fb6cc4062ffcd7e0
 DIST edbrowse-3.4.7.zip 719586 RMD160 baa0bf1c3cb4320aaee3c2c556bc910ca5502a71 SHA1 57f1dbfa2226e5fa8b715498dcd1f699794dc5b0 SHA256 488d8a02b4480f1474686dfa99058b7f2f36c1d4eb1942ee79471aa8327328fe
 DIST edbrowse-3.4.8.zip 725791 RMD160 9466b6e1946a55cc97bd8c7abc670191261b1a41 SHA1 571046b078a4ffbce5952a31e29fc66a8ad02dfc SHA256 b138381a134e8b00a183305ff227bb7fc97d55a2ee5a787499e191445f2d8977
 EBUILD edbrowse-3.4.7.ebuild 1419 RMD160 9a3c75c4a5357e4152f4602c1a0f6dfe4c118de4 SHA1 be41076c1f3462c9bb34e15ebbe3745fb179c443 SHA256 df2a96484aba871be62ed084f74dd87208811ea9e46b33ba91554cbc73db2107
-EBUILD edbrowse-3.4.8.ebuild 1256 RMD160 ba9c03ffc006c4262ab29f9b1758f27ae83d3f00 SHA1 474d99a4b4b47b1ac1d1d04bf4815ff5f9c7d001 SHA256 20e653740bb6a5ed3273260a4150ad75c25b17f4c3d95b7a99547d7943089a7f
-MISC ChangeLog 2268 RMD160 c9d4e6baa29baf53661717949333c139a6419f9e SHA1 99acaa4b5f24f7df669297c0c115f029cc8524ed SHA256 b03821a21dcb3bf58cd5233322707581d664132743e2e7665f74009a27fc92c2
+EBUILD edbrowse-3.4.8.ebuild 1545 RMD160 d62fd06cab1a0cedb8630dbefc573627d37cf689 SHA1 ea0107e9851c353b5702b1d57ab36c8bcf8933c7 SHA256 48de5605f23c96d9644653e58dd21a6c53f6d41603e18ced8ef93b4cc8574ce2
+MISC ChangeLog 2403 RMD160 b7473acdffef352d2f9e35966cca78aa6b5677a8 SHA1 c5409cb86e5113a01ad60b8ffe59e23af9560222 SHA256 13410f6da9226f0ff846770d8afb1efe539bbec981d7064e104b950643cbb51a
 MISC metadata.xml 295 RMD160 9aaf4f6029a98d7cb5b7856117556c722a9a92ef SHA1 a0d281df73f09163fd9e4e5714fe49b7a9e5c03f SHA256 20ab62eb1ca3b77142f2e3d833521693654f3bcc91eed756233c131afec727ab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk7FYtkACgkQ/ejvha5XGaNpOACgpz4uSsu2c/EuyHdeiulUuOrI
-fz4AoOdz1DmbZYbXg/JPSghzuRmafsWf
-=/lhc
+iF4EAREIAAYFAk/gus0ACgkQ2ugaI38ACPBhRwD/Y3reC8znUvfy8cUn2iPQV5oW
+ktcx2yWwgDp/8M0dpaQA/itkXnGQ/KgYrtigNqz0ayuVv2HWDzG/fEK+YgIrdiCq
+=vJsG
 -----END PGP SIGNATURE-----
