@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/edbrowse
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/edbrowse/ChangeLog,v 1.8 2011/11/15 16:38:16 axs Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/edbrowse/ChangeLog,v 1.9 2012/06/19 17:45:19 axs Exp $
+
+  19 Jun 2012; Ian Stakenvicius <axs@gentoo.org> edbrowse-3.4.8.ebuild:
+  added support for spidermonkey-1.8.7, relates to bug 422169
 
 *edbrowse-3.4.8 (15 Nov 2011)
 
